Fix layout problem in BannerHero

--- a/src/sections/BannerHero/BannerHero.scss
+++ b/src/sections/BannerHero/BannerHero.scss
@@ -1,96 +1,107 @@
 @media screen and (min-width: 0px) {
 
-    .banner {
-      overflow-x: hidden;
-      display: flex;
-      flex-direction: column;
+  .banner {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background: #F06F62;
+
+  }
+
+  .bannerHero {
+    height: 100vh;
+    width: 100%;
+    max-width: 700px;
+    // background: #F06F62;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    overflow-x: hidden;
+
+    &__text {
+      width: 90%;
+      margin-top: calc(5% + 90px);
+      margin-left: 20px;
+      z-index: 99;
+
     }
 
-    .bannerHero {
-        height: 100vh;
-        width: 100%;
-        background:  #F06F62;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        overflow-x: hidden;
-
-        &__text {
-           margin-left: 20px;
-           z-index: 99;
-          
-        }
-    
-        &__title {
-            font-family: 'Oswald';
-            font-size: 2.3rem;
-            font-weight: 600;
-            color: #3C3B3B;
-            width: 0;
-            overflow: visible;
-            padding: 0; 
-            margin: 0;
-        }
-    
-        &__caption {
-            font-family: 'Lato';
-            font-size: 28px;
-            color: #3C3B3B;
-            padding: 0; 
-            margin: 0;
-            width: 100%;
-            overflow: visible;
-        }
-
-        &__image {
-          width: 700px;
-          position: absolute;
-          top: 70px;
-          right: 10px;
-        }
+    &__title {
+      font-family: 'Oswald';
+      font-size: 2.3rem;
+      font-weight: 600;
+      color: #3C3B3B;
+      width: 0;
+      overflow: visible;
+      padding: 0;
+      margin: 0;
     }
+
+    &__caption {
+      font-family: 'Lato';
+      font-size: 20px;
+      color: #3C3B3B;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      overflow: visible;
+    }
+
+    &__image {
+      max-width: 80%;
+      max-height: 60%;
+      position: absolute;
+      bottom: 5%;
+      right: 10%;
+    }
+  }
 
 }
 
 
 
 
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 1270px) {
 
-    .banner {
-      overflow-x: hidden;
-      display: flex;
-      flex-direction: row;
-    }
+  .banner {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: row;
+  }
 
-    .bannerHero {
+  .bannerHero {
 
-        &__text {
-          margin-left: 200px;
-          z-index: 99;
-        
-       }
-
-        &__title {
-            font-size: 5.3rem;
-        }
-
-        &__caption {
-            width: 60%;
-        }
-
-
-        &__image {
-          width: 900px;
-          position: absolute;
-          top: 70px;
-          right: 60px;
-        }
+    &__text {
+      margin-top: calc(20vh + 90px);
+      margin-left: 10%;
+      z-index: 99;
 
     }
+
+    &__title {
+      font-size: 5.3rem;
+    }
+
+    &__caption {
+      font-size: 28px;
+      width: 60%;
+    }
+
+
+    &__image {
+      width: 40%;
+      max-width: 900px;
+      position: absolute;
+      top: 25vh;
+      left: unset;
+      right: 10%;
+    }
+
+  }
 
 }
-
